fix: color of the html export button in dark mode

--- a/src/assets/less/theme.less
+++ b/src/assets/less/theme.less
@@ -121,7 +121,8 @@
   ::v-deep .el-icon-upload,
   .el-icon-download,
   .el-icon-refresh,
-  .el-icon-s-grid {
+  .el-icon-s-grid,
+  .el-icon-document {
     color: @nightWhiteColor;
   }
 
